Table address {
  id int [pk, increment]
  user_id int [not null]
  name varchar(255) [not null]
  address varchar(512) [not null]
  default boolean [default: false]
}

Table agent_type {
  id int [pk]
  name varchar [note: 'branch, resturant']
}

Table audit_logs {
  id int [pk, increment]
  table_name varchar [not null]
  record_id int [not null]
  action varchar [not null] // INSERT, UPDATE, DELETE
  performed_by int // user_id or admin_id
  performed_at datetime [not null]
  old_data text
  new_data text
}

Table branch {
  id int [pk, increment]
  name varchar(100) [not null]
  long float
  lat float
  zone_id int [not null]
  percentage float
}

Table campaigns {
  id int [pk, increment]
  name varchar [not null]
  description text
  start_date date [not null]
  end_date date [not null]
  active boolean [default: true]
}

Table carts {
  id int [pk]
  user_id int
}

Table cart_items {
  id int [pk]
  cart_id int
  product_id int
  qty int
  unit_price decimal
  total_price decimal
  resturant_id int
}

Table category {
  id int [pk]
  name varchar
  image_path varchar
  menu_id int
}

Table commercial_place {
  id int [pk]
  name varchar
  long float
  lat float
  branch_id int
}

Table coupon {
  id int [pk, increment]
  type_id int [not null]
  description varchar(255)
  start_date date [not null]
  expire_date date [not null]
}

Table discount_type {
  id int [pk, increment]
  type varchar(50) [not null]
  "type => value , percentage" varchar(100)
  value float [not null]
  operation_id int
}

Table driver {
  id int [pk, increment]
  name varchar(255) [not null]
  username varchar(100) [unique, not null]
  phone_number varchar(20) [unique]
  image_url varchar(512)
  branch_id int
  location_id int
  driver_status varchar(50) [default: 'active']
}

Table driver_safe {
  id int [pk, increment]
  branch_creditor_id int
  driver_debtor_id int
  amount decimal(10, 2) [not null]
  funds_delivered boolean [default: false]
}

Table evaluation {
  id int [pk, increment]
  delevery_id int [not null]
  user_id int [not null]
  rating int [not null]
  comment text
}

Table location {
  id int [pk, increment]
  lat float [not null]
  long float [not null]
}

Table loyalty_points {
  id int [pk, increment]
  user_id int [not null]
  points int [not null]
  description text
  created_at datetime [not null]
}

Table menu {
  id int [pk]
  commercial_place_id int
}

Table method {
  id int [pk]
  name varchar
}

Table modifiers {
  id int [pk]
  name varchar
  selection_type varchar
  is_required boolean
  store_id varchar
}

Table modifier_options {
  id int [pk]
  name varchar
  modifier_id int
  price float
  is_default boolean
}

Table multi_offer {
  id int [pk]
  type_id int
  description text
  new_price float
  old_price float
  expire_date date
  commercial_place_id int
}

Table notifications {
  id int [pk, increment]
  user_id int
  driver_id int
  message text [not null]
  type varchar // 'order', 'promo', etc
  read boolean [default: false]
  created_at datetime [not null]
}

Table order {
  id int [pk]
  user_id int
  total_value decimal
  arrive_time datetime
  driver_id int
  note varchar
  order_state_id int
  order_location_id int
}

Table order_location {
  id int [pk]
  driver_location_id int
}

Table order_state {
  id int [pk]
  state_id int
  order_id int
}

Table order_state_history {
  id int [pk, increment]
  order_id int [not null]
  state_id int [not null]
  changed_at datetime [not null]
}

Table order_tracking {
  id int [pk, increment]
  order_id int [not null]
  driver_id int [not null]
  lat decimal(9,6) [not null]
  long decimal(9,6) [not null]
  tracked_at datetime [not null]
}

Table payment {
  id int [pk]
  order_id int
  user_id int
  amount decimal
  method_id int
  transaction_id varchar [note: 'null if cash']
  waiting_status_id int
  paid_at datetime
}

Table payment_logs {
  id int [pk, increment]
  payment_id int [not null]
  status varchar [not null] // 'pending', 'completed', 'failed', 'refunded'
  log_message text
  created_at datetime [not null]
}

Table product {
  id int [pk]
  name varchar
  category_id int
  image_path varchar
  price float
  note text
  preparation_time int
}

Table product_images {
  id int [pk, increment]
  product_id int [not null]
  image_path varchar [not null]
}

Table product_modifiers {
  id int [pk]
  product_id int
  modifier_id int
}

Table product_offer_list {
  id int [pk]
  multi_offer_id int
  product_id int
}

Table refunds {
  id int [pk]
  order_id int
  amount float
  reason text
  product_id int
  status_id int 
}

Table roles {
  id int [pk, increment]
  role_name varchar [not null]
  description text
}

Table safe {
  id int [pk]
  safe_name varchar
  creditor_id int
  debtor_id int
  amount decimal
  creditor_agent_type_id int
  debtor_agent_type_id int
}

Table single_offer {
  id int [pk]
  type_id int
  product_id int
  commercial_place_id int
}

Table state {
  id int [pk]
  state_name varchar
}

Table user {
  id int [pk, increment]
  "first name" varchar(255) [not null]
  "last name" varchar(255) [not null]
  email varchar(255) [unique, not null]
  "phone number" varchar(20)
  password varchar(255) [not null]
  image_path varchar(512)
  long float
  lat float
  send_notification boolean [default: true]
}

Table users_roles {
  id int [pk, increment]
  user_id int [not null]
  role_id int [not null]

  Indexes {
    (user_id, role_id) [unique]
  }
}

Table user_coupon {
  id int [pk, increment]
  user_id int [not null]
  coupon_id int [not null]
  is_used boolean [default: false]
  
  Indexes {
    (user_id, coupon_id) [unique]
  }
}

Table waiting_status {
  id int [pk]
  name varchar // مثل 'pending', 'successful', 'failed', 'refunded'
}

Table zone {
  id int [pk, increment]
  zone_name varchar(100) [unique, not null]
  long float
  lat float
}

Ref: "address".user_id > "user".id
Ref: "user_coupon".user_id > "user".id
Ref: "order".user_id > "user".id
Ref: "payment".user_id > "user".id
Ref: "evaluation".user_id > "user".id
Ref: "carts".user_id > "user".id

Ref: "user_coupon".coupon_id > "coupon".id
Ref: "coupon".type_id > "discount_type".id

Ref: "driver".branch_id > "branch".id
Ref: "driver".location_id > "location".id
Ref: "branch".zone_id > "zone".id

Ref: "driver_safe".branch_creditor_id > "branch".id
Ref: "driver_safe".driver_debtor_id > "driver".id
Ref: "safe".creditor_id > "branch".id
Ref: "safe".debtor_id > "branch".id
Ref: "safe".creditor_agent_type_id > "agent_type".id
Ref: "safe".debtor_agent_type_id > "agent_type".id

Ref: "evaluation".delevery_id > "order".id

Ref: "commercial_place".id > "menu".commercial_place_id
Ref: "menu".id > "category".menu_id
Ref: "category".id > "product".category_id
Ref: "commercial_place".id > "single_offer".commercial_place_id
Ref: "commercial_place".id > "multi_offer".commercial_place_id
Ref: "product".id > "single_offer".product_id
Ref: "product".id > "product_modifiers".product_id
Ref: "modifiers".id > "modifier_options".modifier_id
Ref: "modifiers".id > "product_modifiers".modifier_id
Ref: "multi_offer".id > "product_offer_list".multi_offer_id
Ref: "product".id > "product_offer_list".product_id

Ref: "order".id > "order_state".order_id
Ref: "state".id > "order_state".state_id
Ref: "order".order_location_id > "order_location".id
Ref: "order".driver_id > "driver".id

Ref: "method".id > "payment".method_id
Ref: "waiting_status".id > "payment".waiting_status_id
Ref: "order".id > "payment".order_id

Ref: "carts".id > "cart_items".cart_id
Ref: "product".id > "cart_items".product_id
Ref: "commercial_place".id > "cart_items".resturant_id

Ref: "discount_type".id > "single_offer".type_id
Ref: "discount_type".id > "multi_offer".type_id

Ref: notifications.user_id > user.id
Ref: users_roles.user_id > user.id
Ref: loyalty_points.user_id > user.id
Ref: audit_logs.performed_by > user.id
Ref: notifications.driver_id > driver.id
Ref: order_tracking.driver_id > driver.id
Ref: order_tracking.order_id > order.id
Ref: order_state_history.order_id > order.id
Ref: order_state_history.state_id > state.id
Ref: users_roles.role_id > roles.id
Ref: payment_logs.payment_id > payment.id
Ref: product_images.product_id > product.id